<resources>
    <string name="app_name">Pizzeria</string>
    <string name="txtTituloPizzeria">PIZZERIA</string>
    <string name="txtBienvenido">¡Bienvenido!</string>
    <string name="btnElegirPizza">Elegir pizza</string>
    <string name="btnConfigurar">Configurar</string>
    <string name="btnSalir">Salir</string>
    <string name="btnPizzaPersonalizada">Pizza personalizada</string>
    <string name="txtConfeccionar">Confeccionarla paso a paso</string>
    <string name="btnRepUltPedido">Repetir último pedido</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="txtIniciarSesion">Iniciar Sesión</string>
    <string name="txtRegistrase">Registrarse</string>
    <string name="txtCheckBoxRecuerdame">Recuerdame</string>
    <string name="txtRegistro">Registro</string>
    <string name="txtUsuario">Usuario</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnPersonalizar">Personalizar</string>
    <string name="btnPredeterminada">Predeterminadas</string>
    <string name="txtPizzas">Pizzas</string>
    <string name="txtSeleccionaPizza">Selecciona una pizza:</string>
    <string name="txtConfirmacionPedido">Confirmar Pedido</string>
    <string name="txtPizzaSeleccionada">Pizza seleccionada:</string>
    <string name="txtTamano">Tamaño:</string>
    <string name="txtPrecio">Precio:</string>
    <string name="txtCambiarFondoColor">Modo oscuro:</string>
    <string name="swOnOff">On/Off</string>
    <string name="txtConfigurar">Configurar</string>
    <string name="txtWeb">Web</string>
    <string name="txtVolver">Volver</string>
    <string name="txtRealizandoPedido">Realizando pedido</string>
    <string name="txtIngredientes">Ingredientes:</string>
    <string name="txtSeleccionarUnaPizza">Selecciona una pizza:</string>
    <string name="txtCantidad">Cantidad:</string>
</resources>