<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacionPedido">

    <Button
        android:id="@+id/btnAceptarConfirmacion"
        android:layout_width="150sp"
        android:layout_height="60sp"
        android:layout_marginTop="112dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/btnAceptar"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="25sp"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarConfirmacion"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPrecio" />

    <Button
        android:id="@+id/btnCancelarConfirmacion"
        android:layout_width="150sp"
        android:layout_height="60sp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/btnCancelar"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="25sp"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPrecio" />

    <TextView
        android:id="@+id/txtPizzaSeleccionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/txtPizzaSeleccionada"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarPedido" />

    <TextView
        android:id="@+id/textViewTamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/txtTamano"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPizzaSeleccionada" />

    <TextView
        android:id="@+id/txtViewPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/txtPrecio"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTamano" />

    <TextView
        android:id="@+id/txtConfirmarPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txtConfirmacionPedido"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewPizzaSelecionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txtPizzaSeleccionada"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarPedido" />

    <TextView
        android:id="@+id/txtTamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textViewTamano"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPizzaSelecionada" />

    <TextView
        android:id="@+id/txtPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txtViewPrecio"
        app:layout_constraintTop_toBottomOf="@+id/txtTamano" />

</androidx.constraintlayout.widget.ConstraintLayout>