<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElegirPizzeria">

    <Button
        android:id="@+id/btnRepUltPedido"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/btnRepUltPedido"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="29sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPredeterminadas" />

    <Button
        android:id="@+id/btnPersonalizada"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/btnPersonalizar"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="29sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPredeterminadas"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/btnPredeterminada"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="29sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPersonalizada" />

    <TextView
        android:id="@+id/textViewElegirPizzeria"
        android:layout_width="271dp"
        android:layout_height="66dp"
        android:layout_marginTop="55dp"
        android:text="@string/btnElegirPizza"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>