<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaPredeterminada">

    <Button
        android:id="@+id/btnAceptarPredeterminada"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/btnAceptar"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPredeterminada"
        app:layout_constraintVertical_bias="0.142" />

    <Spinner
        android:id="@+id/spinnerPredeterminada"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/spinner_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPredeterminada" />

    <LinearLayout
        android:id="@+id/linearLayoutPredeterminada"
        android:layout_width="376dp"
        android:layout_height="391dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeleccionarPizza">

        <ListView
            android:id="@+id/listViewPizzas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/listview_border"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtPizzas"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSeleccionarPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/txtSeleccionaPizza"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancelarPredeterminada"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/btnCancelar"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toEndOf="@+id/btnAceptarPredeterminada"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPredeterminada"
        app:layout_constraintVertical_bias="0.142" />

</androidx.constraintlayout.widget.ConstraintLayout>